sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:16: error: ';' expected but ')' found.
}while(i> x))
            ^